# KLAP-fork

include/: factors.h  klap.h  max.h  scan.h
klap/: README.md
klap/Analysis/: InvarianceAnalyzer.cpp  InvarianceAnalyzer.h
klap/Driver/: CompilerOptions.cpp  CompilerOptions.h
klap/Transform/AG/: Host.h  Kernel.h
klap/Transform/AWB/: Kernel.h
klap/Transform/DAG/: Host.h  Kernel.cpp  Kernel.h
klap/Transform/DE/: Kernel.cpp
klap/Transform/SK/: Kernel.h
klap/Transform/TC/: Host.cpp  Kernel.h
src/: CMakeLists.txt
src/Analysis/: KernelCallFinder.h  SpecialStmtFinder.h  TransformCandidateFinder.h
src/Driver/: Driver.cpp
src/Transform/AG/: Host.cpp  Kernel.cpp
src/Transform/AWB/: Host.cpp  Host.h  Kernel.cpp
src/Transform/DAG/: Host.cpp
src/Transform/DE/: Kernel.h
src/Transform/SK/: Kernel.cpp
src/Transform/TC/: Host.h  Kernel.cpp
src/Transform/TE/: Kernel.h
src/Transform/TH/: Kernel.cpp  Kernel.h
test/: .gitignore
test/BFS/: Makefile  best_combination.sh  common.h  kernel.cdp.cu  kernel.nocdp.cu  main.cu  sweep.sh
test/BT/: Makefile  best_combination.sh  common.h  kernel.cdp.cu  kernel.nocdp.cu  main.cu  sweep.sh  verify.cu
test/MST/: Makefile  best_combination.sh  common.h  kernel.nocdp.cu  sweep.sh
test/SP/: Makefile  best_combination.sh  kernel.cdp.cu  kernel.nocdp.cu  sweep.sh
test/SSSP/: Makefile  best_combination.sh  kernel.cdp.cu  kernel.nocdp.cu  sweep.sh
test/TC/: Makefile  README  best_combination.sh  binary_search.h  common.h  kernel.base.cu  main.cu  sweep.sh  tc.cu  test.sh  utilities.cu  utilities.h
(+1 files in other folders)
